# purchasing-coach

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.command  run.sh  stress_test.py
.github/workflows/: ci.yml
coach/: __init__.py  backends.py  cli.py  documents.py  excel.py  format.py  guideline.py  llm.py  models.py  tender.py  webui.py
coach/backends/: __init__.py  base.py  bm25.py  claude_api.py  embedded.py  keyword.py  openai_compat.py  template.py
coach/gguf_models/: __init__.py
coach/retrieval/: __init__.py  index.py  ranker.py  tokenizer.py
coach/templates/: __init__.py  scenarios.py
samples/: TENDER_TEMPLATE.xlsx  XXEON_IT_Procurement_Guideline.docx  guideline_text.md
scripts/: _bootstrap.py  build_portable.py  make_samples.py  portable_README.md  portable_run.bat  portable_run.command  portable_run.sh
tests/: conftest.py  test_backends.py  test_claude.py  test_cli.py  test_documents.py  test_embedded.py  test_excel.py  test_format.py  test_guideline.py  test_local_server.py  test_models.py  test_openai_compat.py  test_posix_launchers.py  test_retrieval.py  test_run_scripts.py  test_scenarios.py  test_template_backend.py  test_tender.py  test_webui.py  test_webui_markdown.py
